my-first-github-repo

--- a/index.html
+++ b/index.html
@@ -3,9 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My first ever github repo</title>
+    <title>my-first-github-repo</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    
+    <div class="navbar">
+        <p>logo</p>
+        <a href="#">home</a>
+        <a href="#">services</a>
+        <a href="#">product</a>
+        <a href="#">help</a>
+    </div>
+    <h3>my personal website</h3>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora nobis animi adipisci consequatur ex facilis debitis voluptatibus ab asperiores omnis?</p>
+    <h4>about my services</h4>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore quod veritatis sint tempora rem repudiandae rerum commodi officia consequuntur. Ipsam eveniet itaque voluptate provident voluptatibus, quos nobis sit explicabo reprehenderit.</p>
 </body>
 </html>
