--- a/index.html
+++ b/index.html
@@ -18,5 +18,15 @@
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora nobis animi adipisci consequatur ex facilis debitis voluptatibus ab asperiores omnis?</p>
     <h4>about my services</h4>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore quod veritatis sint tempora rem repudiandae rerum commodi officia consequuntur. Ipsam eveniet itaque voluptate provident voluptatibus, quos nobis sit explicabo reprehenderit.</p>
+
+    <div class="item">
+        <ol>
+            <li>first html</li>
+            <li>second css</li>
+            <li>git and github</li>
+
+        </ol>
+    </div>
 </body>
+
 </html>
