sadi id card image

--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
 
         </ol>
     </div>
+    <div>
+        <img src="images/IMG_20190807_104943.jpg" alt="sadi id card photo">
+    </div>
 </body>
 
 </html>
